Fix <hr> alignment and add new size

--- a/src/elements/hr.css
+++ b/src/elements/hr.css
@@ -1,13 +1,19 @@
 hr {
-  height: 1px;
-  margin-block-start: 40px;
-  margin-block-end: 40px;
+  height: 2px;
+  margin-block-start: 32px;
+  margin-block-end: 32px;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
   background-color: var(--color-divider);
   border: none;
 }
 
 hr.transparent {
   background-color: transparent;
+}
+
+hr.mini {
+  width: 12.5%;
 }
 
 hr.small {
